support raring->saucy release upgrades harder

--- a/data/mirrors.cfg
+++ b/data/mirrors.cfg
@@ -847,3 +847,57 @@ http://ubuntu.uestc.edu.cn/ubuntu/
 http://suro.ubaya.ac.id/ubuntu/
 http://ubuntu.repo.unpas.ac.id/ubuntu/
 http://ubuntu.ntc.net.np/ubuntu/
+http://archive.ubuntu.csg.uzh.ch/ubuntu/
+http://ftp.belnet.be/ubuntu.com/ubuntu/
+http://mirror.optimate-server.de/ubuntu/
+http://ftp.nluug.nl/os/Linux/distr/ubuntu/
+http://hive.ist.unomaha.edu/ubuntu-archive/
+http://mirror.muntinternet.net/pub/nl.archive.ubuntu.com/
+http://mirror.tocici.com/ubuntu/
+http://mirrors.advancedhosters.com/ubuntu/
+http://ubuntu.mirror.constant.com/
+http://ftp.csie.chu.edu.tw/Ubuntu/archive/
+http://ftp.cuhk.edu.hk/pub/Linux/ubuntu/
+http://ftp.hawo.stw.uni-erlangen.de/ubuntu/
+http://ftp.stust.edu.tw/pub/Linux/ubuntu/
+http://ftp.stut.edu.tw/pub/Linux/ubuntu/
+http://ftp.tc.edu.tw/Linux/ubuntu/
+http://ftp.uni-mainz.de/ubuntu/
+http://ftp.wa.co.za/pub/ubuntu/ubuntu/
+http://linux.xjtuns.cn/ubuntu/
+http://mirror.cogentco.com/pub/linux/ubuntu/
+http://mirror.easyspeedy.com/ubuntu/
+http://mirror.jmu.edu/pub/ubuntu/
+http://mirror.nexcess.net/ubuntu/
+http://mirror.overthewire.com.au/ubuntu/
+http://mirror.tcpdiag.net/ubuntu/
+http://mirror.thelinuxfix.com/ubuntu/
+http://mirror.unej.ac.id/ubuntu/
+http://mirror.veracruz.co/ubuntu/
+http://mirrors.arpnetworks.com/Ubuntu/
+http://mirrors.liquidweb.com/ubuntu/
+http://mirrors.tuna.tsinghua.edu.cn/ubuntu/
+http://mirrors.yun-idc.com/ubuntu/
+http://repo.undip.ac.id/ubuntu/
+http://mirror.siamdata.co.th/ubuntu/
+http://ubuntu-archive.mirror.nucleus.be/
+http://ubuntu-archive.mirror.serveriai.lt/
+http://ubuntu.01link.hk/
+http://ubuntu.bhs.mirrors.ovh.net/ftp.ubuntu.com/ubuntu/
+http://ubuntu.ip-connect.vn.ua/
+http://ubuntu.mirror.neology.co.za/ubuntu/
+http://ubuntu.mirror.uber.com.au/archive/
+http://ubuntu.uhost.hk/
+http://ubuntu.xfree.com.ar/ubuntu/
+http://archive.ubuntu.webxcreen.org/
+http://az-1.hpcloud.mirror.websitedevops.com/ubuntu/
+ftp://ftp.cesca.cat/ubuntu/archieve/
+http://mirror.dhakacom.com/ubuntu/
+http://mirror.logol.ru/ubuntu/
+http://mirror.stshosting.co.uk/ubuntu/
+http://mirror2.tuxinator.org/ubuntu/
+http://pandawa.ipb.ac.id/ubuntu/
+http://releases.ubuntu.spd.co.il/
+http://ubuntu.mirror.ac.ke/ubuntu/
+http://ubuntu.ucr.ac.cr/ubuntu/
+http://jaran.undip.ac.id/ubuntu/
