--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,785 +1,129 @@
-# demoted packages from precise to quantal
-akregator
-amarok
-amarok-common
-amarok-dbg
-amarok-utils
-amor
-analitza-dbg
-analitza-dev
-apport-kde
-apturl-kde
-ark
-ark-dbg
-avogadro-data
-blogilo
-bluedevil
-bomber
-bovo
-braindump
-calligra
-calligra-data
-calligra-dbg
-calligra-dev
-calligra-l10n-ca
-calligra-l10n-cavalencia
-calligra-l10n-da
-calligra-l10n-de
-calligra-l10n-el
-calligra-l10n-engb
-calligra-l10n-es
-calligra-l10n-et
-calligra-l10n-fi
-calligra-l10n-fr
-calligra-l10n-hu
-calligra-l10n-it
-calligra-l10n-kk
-calligra-l10n-nb
-calligra-l10n-nds
-calligra-l10n-nl
-calligra-l10n-pl
-calligra-l10n-pt
-calligra-l10n-ptbr
-calligra-l10n-ru
-calligra-l10n-sk
-calligra-l10n-sv
-calligra-l10n-uk
-calligra-l10n-zhcn
-calligra-l10n-zhtw
-calligra-libs
-calligraflow
-calligraflow-data
-calligraplan
-calligrasheets
-calligrastage
-calligrawords
-calligrawords-data
-cdparanoia
-cdrdao
-cervisia
-choqok
-compiz-fusion-plugins-main
-create-resources
-cvsservice
-dia-common
-dia-gnome
-dia-libs
-doc-linux-html
-doc-linux-text
-dolphin
-dragonplayer
-dvipng
-ebook-tools-dbg
-enscript
-expat
-eyed3
-filelight
-fonts-dustin
-fonts-sil-gentium
-fonts-sil-gentium-basic
-fortune-mod
-fortunes-min
-freecdb
-freespacenotifier
-gawk-doc
-gcj-4.6-source
-gfortran-4.6
-gfortran-4.6-multilib
-gftp-common
-gftp-gtk
-ggzcore-bin
-gir1.2-launchpad-integration-3.0
-glade
-gle-doc
-gnugo
-gobjc-4.6
-gpgsm
-gpsd
-gpsd-dbg
-gstreamer0.10-qapt
-gtk2-engines-oxygen
-gtk3-engines-oxygen
-gwenview
-gwenview-dbg
-ibus-qt4
-indi-dbg
-jockey-kde
-jovie
-juk
-k3b
-k3b-data
-k3b-dbg
-kaccessible
-kaddressbook
-kajongg
-kalarm
-kalgebra
-kalgebra-common
-kalgebra-dbg
-kalzium
-kalzium-data
-kalzium-dbg
-kamera
-kamera-dbg
-kanagram
-kanagram-dbg
-kapman
-kapptemplate
-karbon
-katomic
-kbattleship
-kblackbox
-kblocks
-kbounce
-kbreakout
-kbruch
-kbruch-dbg
-kcachegrind
-kcalc
-kcharselect
-kcm-gtk
-kcm-touchpad
-kcolorchooser
-kcron
-kde-baseapps
-kde-baseapps-bin
-kde-baseapps-data
-kde-config-cddb
-kde-config-cron
-kde-config-gtk
-kde-config-touchpad
-kde-icons-mono
-kde-l10n-ar
-kde-l10n-bg
-kde-l10n-bs
-kde-l10n-ca
-kde-l10n-ca-valencia
-kde-l10n-cs
-kde-l10n-da
-kde-l10n-de
-kde-l10n-el
-kde-l10n-engb
-kde-l10n-es
-kde-l10n-et
-kde-l10n-eu
-kde-l10n-fa
-kde-l10n-fi
-kde-l10n-fr
-kde-l10n-ga
-kde-l10n-gl
-kde-l10n-he
-kde-l10n-hr
-kde-l10n-hu
-kde-l10n-ia
-kde-l10n-id
-kde-l10n-is
-kde-l10n-it
-kde-l10n-ja
-kde-l10n-kk
-kde-l10n-km
-kde-l10n-ko
-kde-l10n-lt
-kde-l10n-lv
-kde-l10n-nb
-kde-l10n-nds
-kde-l10n-nl
-kde-l10n-nn
-kde-l10n-pa
-kde-l10n-pl
-kde-l10n-pt
-kde-l10n-ptbr
-kde-l10n-ro
-kde-l10n-ru
-kde-l10n-si
-kde-l10n-sk
-kde-l10n-sl
-kde-l10n-sr
-kde-l10n-sv
-kde-l10n-tg
-kde-l10n-th
-kde-l10n-tr
-kde-l10n-ug
-kde-l10n-uk
-kde-l10n-vi
-kde-l10n-wa
-kde-l10n-zhcn
-kde-l10n-zhtw
-kde-style-oxygen
-kde-wallpapers
-kde-wallpapers-default
-kde-window-manager
-kde-window-manager-common
-kde-workspace
-kde-workspace-bin
-kde-workspace-data
-kde-workspace-data-extras
-kde-workspace-dbg
-kde-workspace-dev
-kde-workspace-kgreet-plugins
-kde-zeroconf
-kdeaccessibility
-kdeadmin
-kdeadmin-dbg
-kdeartwork-dbg
-kdebase-workspace
-kdebase-workspace-dev
-kdeedu
-kdeedu-kvtml-data
-kdegames
-kdegames-card-data
-kdegames-card-data-extra
-kdegames-dbg
-kdegames-mahjongg-data
-kdegraphics
-kdegraphics-libs-data
-kdegraphics-mobipocket
-kdegraphics-strigi-analyzer
-kdegraphics-thumbnailers
-kdemultimedia
-kdemultimedia-kio-plugins
-kdenetwork
-kdenetwork-dbg
-kdenetwork-filesharing
-kdepasswd
-kdepim
-kdepim-dev
-kdepim-doc
-kdepim-kresources
-kdepim-strigi-plugins
-kdeplasma-addons
-kdeplasma-addons-dbg
-kdesdk
-kdesdk-dolphin-plugins
-kdesdk-kio-plugins
-kdesdk-misc
-kdesdk-strigi-plugins
-kdesudo
-kdetoys
-kdetoys-dbg
-kdeutils
-kdewebdev
-kdewebdev-dbg
-kdf
-kdiamond
-kdm
-kexi
-kfilereplace
-kfind
-kfourinline
-kgamma
-kgeography
-kgeography-data
-kget
-kgoldrunner
-kgpg
-khangman
-khelpcenter4
-kig
-kigo
-killbots
-kimagemapeditor
-kinfocenter
-kiriki
-kjots
-kjumpingcube
-klettres
-klettres-data
-klickety
-klines
-klinkstatus
-klipper
-kmag
-kmahjongg
-kmail
-kmenuedit
-kmines
-kmix
-kmousetool
-kmouth
-kmplot
-kmtrace
-knetwalk
-knode
-knotes
-kolf
-kollision
-kolourpaint4
-kommander
-kompare
-konq-plugins
-konqueror
-konqueror-nsplugins
-konquest
-konsolekalendar
-konversation
-konversation-data
-konversation-dbg
-kopete
-kopete-message-indicator
-korganizer
-kpartloader
-kpat
-kppp
-krdc
-kremotecontrol
-kreversi
-krfb
-krita
-krita-data
-krosspython
-kruler
-ksaneplugin
-kscd
-kshisen
-ksirk
-ksnapshot
-kspaceduel
-ksquares
-kstars
-kstars-data
-ksudoku
-ksysguard
-ksysguardd
-ksystemlog
-kteatime
-ktimer
-ktimetracker
-ktorrent
-ktorrent-data
-ktorrent-dbg
-ktouch
-ktouch-data
-ktron
-kttsd
-ktuberling
-kturtle
-ktux
-kubrick
-kubuntu-default-settings
-kubuntu-desktop
-kubuntu-docs
-kubuntu-full
-kubuntu-netbook
-kubuntu-netbook-default-settings
-kubuntu-notification-helper
-kubuntu-notification-helper-dbg
-kubuntu-web-shortcuts
-kuiviewer
-kuser
-kvkbd
-kwalletmanager
-kwordquiz
-kwrite
-lacheck
-language-selector-kde
-latex-sanskrit
-launchpad-integration
-libanalitza4abi1
-libanalitzagui4abi1
-libapache2-mod-auth-kerb
-libavogadro-dev
-libavogadro1
-libbluedevil-dev
-libbluedevil1
-libboost-graph1.46-dev
-libboost-graph1.46.1
-libboost-iostreams1.46-dev
-libboost-iostreams1.46.1
-libboost-program-options1.46-dev
-libboost-program-options1.46.1
-libboost-python1.46-dev
-libboost-python1.46.1
-libboost-regex1.46-dev
-libboost-regex1.46.1
-libboost-serialization1.46-dev
-libboost-serialization1.46.1
-libboost-test1.46-dev
-libboost-test1.46.1
-libboost1.46-dbg
-libboost1.46-dev
-libboost1.46-doc
-libcalendarsupport4
-libcfitsio3
-libcfitsio3-dbg
-libcfitsio3-dev
-libcfitsio3-doc
-libcln-dev
-libcln6
-libcue-dev
-libcue1
-libeigen2-dev
-libeigen2-doc
-libepub-dev
-libepub0
-libeventviews4
-libfacile-ocaml-dev
-libfli-dev
-libfli1
-libgdu-gtk-dev
-libgdu-gtk0
-libggz-dev
-libggz2
-libggzcore-dev
-libggzcore9
-libggzmod-dev
-libggzmod4
-libgle3
-libgle3-dev
-libglew1.5
-libglew1.5-dev
-libglewmx1.5
-libglewmx1.5-dev
-libgps-dev
-libgps20
-libgtlcore0.8
-libgtlfragment0.8
-libgtlimageio0.8
-libibus-qt-dev
-libibus-qt1
-libifp-dev
-libifp4
-libincidenceeditorsng4
-libindi-data
-libindi-dev
-libindicate-qt-dev
-libindicate-qt1
-libjpeg-progs
-libjpeg-turbo-progs
-libk3b-dev
-libk3b6
-libk3b6-extracodecs
-libkateinterfaces4
-libkcddb-dev
-libkcddb4
-libkdcraw-data
-libkdcraw-dev
-libkdeedu-data
-libkdeedu-dbg
-libkdeedu-dev
-libkdegames-dev
-libkdegames5a
-libkdepim4
-libkdepimdbusinterfaces4
-libkdgantt2
-libkeduvocdocument4
-libkephal4abi1
-libkexiv2-10
-libkexiv2-data
-libkexiv2-dbg
-libkexiv2-dev
-libkipi-data
-libkipi-dbg
-libkipi-dev
-libkleo4
-libkmahjongglib4
-libkmanagesieve4
-libkopete-dev
-libkopete4
-libkpathsea5
-libkpgp4
-libksane-data
-libksane-dbg
-libksane-dev
-libksane0
-libkscreensaver5
-libksgrd4
-libksieve4
-libksieveui4
-libksignalplotter4
-libktorrent-dbg
-libktorrent-dev
-libktorrent-l10n
-libkwinactiveglesutils1
-libkwinactivenvidiahack4
-libkwinglesutils1
-libkwinnvidiahack4
-liblastfm-dbg
-liblastfm-dev
-liblastfm0
-liblaunchpad-integration-3.0-1
-liblaunchpad-integration-3.0-dev
-liblaunchpad-integration-cil-dev
-liblaunchpad-integration-common
-liblaunchpad-integration-dev
-liblaunchpad-integration1
-liblaunchpad-integration1.0-cil
-libloudmouth1-0
-libloudmouth1-0-dbg
-libloudmouth1-dev
-liblouis-data
-liblouis-dev
-liblouis2
-liblsofui4
-libmad0
-libmad0-dev
-libmailcommon4
-libmarble-dev
-libmessagecomposer4
-libmessagecore4
-libmessagelist4
-libmessageviewer4
-libmpcdec-dev
-libmpcdec6
-libmsn-dev
-libmsn0.3
-libmsn0.3-dbg
-libmuonprivate1
-libmusicbrainz3-6
-libmusicbrainz3-dev
-libmygpo-qt-dev
-libmygpo-qt1
-libmysqld-pic
-libnepomukdatamanagement4
-libnjb-dev
-libnjb-doc
-libnjb5
-libnova-dev
-libnunit2.5-cil
-libokularcore1abi1
-libopenal-data
-libopenal-dev
-libopenal1
-libopenbabel-dev
-libopenbabel-doc
-libopenbabel4
-libopenctl0.8
-libopenshiva0.8
-libotr2
-libotr2-dev
-libplasma-geolocation-interface4
-libplasmaclock4abi3
-libplasmagenericshell4
-libplot-dev
-libplot2c2
-libpqxx-3.1
-libpqxx-3.1-dbg
-libpqxx3-dev
-libpqxx3-doc
-libprocesscore4abi1
-libprocessui4a
-libpstoedit-dev
-libpstoedit0c2a
-libqalculate-dev
-libqalculate-doc
-libqalculate5
-libqca2-plugin-ossl
-libqgpsmm-dev
-libqgpsmm20
-libqoauth-dev
-libqoauth1
-libqscintilla2-designer
-libqt4-sql-odbc
-libqt4-sql-psql
-libqtgtl-dev
-libqtgtl0.1
-libqtscript4-core
-libqtscript4-doc
-libqtscript4-gui
-libqtscript4-network
-libqtscript4-sql
-libqtscript4-uitools
-libqtscript4-xml
-libqtshiva0.1
-libqtwebkit-qmlwebkitplugin
-libqwt-dev
-libqwt-doc
-libqwt6
-libreoffice
-libreoffice-filter-mobiledev
-libreoffice-kde
-libreoffice-style-oxygen
-libreplaygain-dev
-libreplaygain1
-libsolidcontrol4abi2
-libsolidcontrolifaces4abi2
-libspnav-dev
-libspnav0
-libtag-extras-dev
-libtag-extras1
-libtaskmanager4abi3
-libtemplateparser4
-libunicode-map8-perl
-libunicode-string-perl
-libweather-ion6
-libxbase2.0-0
-libxbase2.0-dev
-libxcb-ewmh1
-libxml-handler-yawriter-perl
-libxml-sax-machines-perl
-libxml-twig-perl
-libxml-xpath-perl
-libxsltc-java
-libyajl1
-libzip-dev
-libzip2
-liferea
-liferea-data
-liferea-dbg
-lirc
-lokalize
-lskat
-marble
-marble-data
-marble-dbg
-marble-plugins
-mtp-tools
-muon
-muon-dbg
-muon-installer
-muon-notifier
-muon-updater
-network-manager-kde
-ocaml-native-compilers
-okular
-okular-dbg
-okular-dev
-okular-extra-backends
-opengtl-dev
-openoffice.org-hyphenation-lt
-oxygen-cursor-theme
-oxygen-cursor-theme-extra
-palapeli
-palapeli-data
-parley
-parley-data
-partitionmanager
-pinentry-qt4
-plasma-containments-addons
-plasma-dataengines-addons
-plasma-dataengines-workspace
-plasma-desktop
-plasma-runners-addons
-plasma-scriptengine-python
-plasma-scriptengine-superkaramba
-plasma-wallpapers-addons
-plasma-widget-facebook
-plasma-widget-folderview
-plasma-widget-kimpanel
-plasma-widget-ktorrent
-plasma-widget-lancelot
-plasma-widget-menubar
-plasma-widget-message-indicator
-plasma-widget-networkmanagement-dbg
-plasma-widgets-addons
-plasma-widgets-workspace
-plymouth-theme-kubuntu-logo
-plymouth-theme-kubuntu-text
-polkit-kde-1
-printer-applet
-pstoedit
-pymacs
-python-avogadro
-python-enchant
-python-eyed3
-python-germinate
-python-gtk2-tutorial
-python-gtop
-python-iniparse
-python-launchpad-integration
-python-launchpad-integration-dbg
-python-levenshtein
-python-libproxy
-python-louis
-python-packagekit
-python-pyudev
-python-qscintilla2
-python-vobject
-qapt-deb-installer
-qt-x11-free-dbg
-qt4-doc-html
-quassel
-quassel-data
-quassel-dbg
-rdesktop
-rekonq
-rekonq-dbg
-rocs
-rocs-dbg
-scribus
-scribus-doc
-skanlite
-skanlite-dbg
-software-properties-kde
-speedcrunch
-step
-svgpart
-sweeper
-system-config-printer-kde
-systemsettings
-tasks-icons
-tex4ht
-tex4ht-common
-texlive-doc-bg
-texlive-doc-cs+sk
-texlive-doc-de
-texlive-doc-en
-texlive-doc-es
-texlive-doc-fi
-texlive-doc-fr
-texlive-doc-it
-texlive-doc-ja
-texlive-doc-ko
-texlive-doc-mn
-texlive-doc-nl
-texlive-doc-pl
-texlive-doc-pt
-texlive-doc-ru
-texlive-doc-si
-texlive-doc-th
-texlive-doc-tr
-texlive-doc-uk
-texlive-doc-vi
-texlive-doc-zh
-texlive-fonts-extra
-texlive-lang-african
-texlive-lang-all
-texlive-lang-arabic
-texlive-lang-armenian
-texlive-lang-croatian
-texlive-lang-cyrillic
-texlive-lang-czechslovak
-texlive-lang-danish
-texlive-lang-dutch
-texlive-lang-finnish
-texlive-lang-french
-texlive-lang-greek
-texlive-lang-hebrew
-texlive-lang-hungarian
-texlive-lang-indic
-texlive-lang-italian
-texlive-lang-latin
-texlive-lang-latvian
-texlive-lang-lithuanian
-texlive-lang-mongolian
-texlive-lang-norwegian
-texlive-lang-other
-texlive-lang-polish
-texlive-lang-portuguese
-texlive-lang-spanish
-texlive-lang-swedish
-texlive-lang-tibetan
-texlive-lang-vietnamese
-texlive-publishers
-texlive-science
-translate-toolkit
-translate-toolkit-dev-doc
-ttf-dustin
-ttf-sil-gentium-basic
-type-handling
-ubiquity-frontend-kde
-ubiquity-slideshow-kubuntu
-umbrello
-unclutter
-update-manager-kde
-usb-creator-kde
-userconfig
-vorbisgain
-xml-twig-tools
-xnest
-xplanet
-xplanet-images
-xrestop
-xscreensaver
-xscreensaver-data
-xscreensaver-gl
-xsettings-kde
+# demoted packages from quantal to raring
+cloud-initramfs-growroot
+cpp-4.6
+cpp-4.6-doc
+g++-4.6
+g++-4.6-multilib
+gcc-4.6-base
+gcc-4.6-doc
+gcc-4.6-multilib
+gcc-4.6-plugin-dev
+gcc-4.6-source
+gcj-4.6-base
+gcj-4.6-jdk
+gcj-4.6-jre
+gcj-4.6-jre-headless
+gcj-4.6-jre-lib
+gfortran-4.6-doc
+gir1.2-clutter-gst-1.0
+gir1.2-indicate-0.7
+gir1.2-ubuntuoneui-3.0
+gnome-media
+gnome-online-accounts
+guile-1.8
+guile-1.8-dev
+guile-1.8-doc
+guile-1.8-libs
+gwibber
+gwibber-service
+gwibber-service-facebook
+gwibber-service-identica
+gwibber-service-sina
+gwibber-service-sohu
+gwibber-service-twitter
+im-switch
+installation-guide-armel
+lib32objc3
+lib32objc3-dbg
+lib32stdc++6-4.6-dbg
+lib64objc3
+lib64objc3-dbg
+lib64stdc++6-4.6-dbg
+libapm-dev
+libapm1
+libatk-adaptor-data
+libboost-regex-dev
+libcgi-fast-perl
+libclutter-gst-1.0-0
+libclutter-gst-1.0-dbg
+libclutter-gst-dev
+libclutter-gst-doc
+libcolord-gtk-dev
+libcolord-gtk1
+libdevel-leak-perl
+libfcgi-perl
+libgcj12
+libgcj12-awt
+libgcj12-dbg
+libgcj12-dev
+libgnome-media-profiles-3.0-0
+libgnome-media-profiles-dev
+libgnome-menu-dev
+libgnome-menu2
+libindicate-dev
+libindicate-doc
+libindicate-gtk-dev
+libindicate-gtk0.1-cil
+libindicate-gtk0.1-cil-dev
+libindicate-gtk3
+libindicate-gtk3-dev
+libindicate0.1-cil
+libindicate0.1-cil-dev
+libindicate5
+libllvm-3.1-ocaml-dev
+libllvm3.1
+libmath-round-perl
+libmusicbrainz5-0
+libmusicbrainz5-dev
+libmusicbrainz5-doc
+libobjc3
+libobjc3-dbg
+libreoffice-presenter-console
+libsource-highlight-common
+libsource-highlight-dev
+libsource-highlight4
+libstdc++6-4.6-dbg
+libstdc++6-4.6-dev
+libstdc++6-4.6-doc
+libstlport4.6-dev
+libstlport4.6ldbl
+libtelepathy-farstream2
+libtelepathy-farstream2-dbg
+libubuntuoneui-3.0-1
+libubuntuoneui-dev
+libvala-0.14-0
+libvala-0.14-0-dbg
+libvala-0.14-dev
+libyaml-syck-perl
+llvm-3.1
+llvm-3.1-dev
+llvm-3.1-doc
+llvm-3.1-examples
+llvm-3.1-runtime
+mscgen
+ndisgtk
+ndiswrapper-common
+ndiswrapper-utils-1.9
+python-gmenu
+python-gmenu-dbg
+python-gnupginterface
+python-magic
+python-uno
+python3-zope.fixers
+slugimage
+source-highlight
+syslinux-themes-ubuntu-quantal
+tcl8.4
+tcl8.4-dev
+tcl8.4-doc
+tk8.4
+tk8.4-dev
+tk8.4-doc
+ubuntu-defaults-zh-cn
+ubuntu-wallpapers-quantal
+ubuntuone-couch
+unity-lens-gwibber
+vala-0.14-doc
+valac-0.14
+valac-0.14-dbg
+xmlstarlet
