Fixes bug 1153540 ('Authentication is required to perform a release upgrade' is geeky).

--- a/data/com.ubuntu.release-upgrader.policy.in
+++ b/data/com.ubuntu.release-upgrader.policy.in
@@ -10,7 +10,7 @@
 
   <action id="com.ubuntu.release-upgrader.release-upgrade">
     <_description>Perform a release upgrade</_description>
-    <_message>Authentication is required to perform a release upgrade</_message>
+    <_message>To upgrade Ubuntu, you need to authenticate.</_message>
     <annotate key="org.freedesktop.policykit.exec.path">/usr/bin/do-release-upgrade</annotate>
     <annotate key="org.freedesktop.policykit.exec.allow_gui">true</annotate>
 
@@ -23,7 +23,7 @@
 
   <action id="com.ubuntu.release-upgrader.partial-upgrade">
     <_description>Perform a partial upgrade</_description>
-    <_message>Authentication is required to perform a partial upgrade</_message>
+    <_message>To perform a partial upgrade, you need to authenticate.</_message>
     <annotate key="org.freedesktop.policykit.exec.path">/usr/lib/ubuntu-release-upgrader/do-partial-upgrade</annotate>
     <annotate key="org.freedesktop.policykit.exec.allow_gui">true</annotate>
 
