synchronize metapkg information

--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -5,6 +5,8 @@ ubuntu-desktop
 kubuntu-desktop
 xubuntu-desktop
 lubuntu-desktop
+mythbuntu-desktop
+ubuntustudio-desktop
 # ubuntu-release-upgrader should not remove itself or update-manager
 update-manager
 update-manager-core
