--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -10,7 +10,7 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop, ubuntu-netbook, kubuntu-netbook, lubuntu-desktop
+MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop, kubuntu-netbook, lubuntu-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
