Use new MetaReleaseCore.downloaded event
This saves some fractional seconds waiting for meta-release
downloading.

--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,7 @@ Section: python
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python3:Depends},
          ${misc:Depends},
-         python3-update-manager,
+         python3-update-manager (>= 1:0.196.2~),
          python3-apt (>= 0.8.5~),
          lsb-release
 Replaces: python3-update-manager (<< 1:0.165)
