--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -46,13 +46,13 @@ PostUpgradeRemove=xscreensaver, gnome-cups-manager, powermanagement-interface, d
 ForcedObsoletes=desktop-effects, gnome-app-install, policykit-gnome, gnome-mount
 
 [kubuntu-desktop]
-KeyDependencies=kdm, kubuntu-artwork
+KeyDependencies=plasma-desktop, kubuntu-settings-desktop
 PostUpgradeRemove=powermanagement-interface, guidance-power-manager, kde-guidance-powermanager
 # those packages are marked as obsolete right after the upgrade
 ForcedObsoletes=ivman, gtk-qt-engine
 
 [kubuntu-netbook]
-KeyDependencies=kdm, kubuntu-netbook-default-settings
+KeyDependencies=plasma-netbook, kubuntu-settings-netbook
 
 [ubuntu-netbook]
 KeyDependencies=gdm, ubuntu-netbook-default-settings
