* data/DistUpgrade.cfg:   - updated for trusty->utopic   - updated kernel remove version   - add ubuntu-gnome-desktop meta package   - remove no longer needed configuration entries * data/removal_blacklist.cfg:   - add ubuntu-gnome-desktop * DistUpgrade/{Devel,EOF,}ReleaseAccounement, DistUpgrade/window_main.ui:   - updated for utopic * DistUpgrade/dist-upgrade.py:   - move from py2 to py3 * pre-build.sh:   - update demotions   - use py3 version of apt_btrfs_snapshot.py * tests/Makefile:   - removed, not used anymore * DistUpgrade/DistUpgradeCache.py:   - remove py2ism

--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -7,6 +7,7 @@ xubuntu-desktop
 lubuntu-desktop
 mythbuntu-desktop
 ubuntustudio-desktop
+ubuntu-gnome-desktop
 # ubuntu-release-upgrader should not remove itself or update-manager
 update-manager
 update-manager-core
