--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -1,7 +1,8 @@
 [View]
 # the views will be tried in this order, if one fails to import, the next
 # is tried
-View=DistUpgradeViewGtk3,DistUpgradeViewGtk,DistUpgradeViewKDE,DistUpgradeViewText
+View=DistUpgradeViewGtk3,DistUpgradeViewGtk,DistUpgradeViewKDE,
+  DistUpgradeViewText
 #View=DistUpgradeViewNonInteractive
 #Depends= python-apt (>= 0.6.0), apt (>= 0.6)
 # the views below support upgrades over ssh connection
@@ -10,32 +11,35 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop, kubuntu-netbook, lubuntu-desktop
+MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, 
+   ubuntustudio-desktop, mythbuntu-desktop, kubuntu-netbook, 
+   lubuntu-desktop, ubuntu-gnome-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
-RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
+#RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
 RemovalBlacklistFile=removal_blacklist.cfg
 # if those packages were installed, make sure to keep them installed
-KeepInstalledPkgs=gnumeric, hpijs, xserver-xorg-video-all
+KeepInstalledPkgs=xserver-xorg-video-all
 KeepInstalledSection=translations
 RemoveObsoletes=yes
-ForcedObsoletes=ksplash-engine-moodin, powernowd, laptop-mode-tools
+#ForcedObsoletes=ksplash-engine-moodin, powernowd, laptop-mode-tools
 # hints for for stuff that should be done early
-PostUpgradePurge=ltsp-client, ltspfsd, linux-restricted-modules-common
-PostUpgradeRemove=libflashsupport, kvm-source, gtk-qt-engine, libparted1.8-12, usplash, printconf, foomatic-db-gutenprint, ebox-printers, kbluetooth, kde-plasmoid-cwp, kdm, xsettings-kde
-PostUpgradeUpgrade=brasero,edubuntu-desktop
+#PostUpgradePurge=linux-restricted-modules-common
+#PostUpgradeRemove=xsettings-kde
+#PostUpgradeUpgrade=brasero,edubuntu-desktop
 #PostUpgradeInstall=apt
 PostInstallScripts=./xorg_fix_proprietary.py
 EnableApport=yes
 # this supported blacklisting certain versions to ensure we do not upgrade
 #  - blcr-dkms fails to build on kernel 2.6.35
-BadVersions=blcr-dkms_0.8.2-13
+#BadVersions=blcr-dkms_0.8.2-13
 # ubiquity slideshow
 #SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
 [KernelRemoval]
-Version=3.8.0
-BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,linux-header-lbm
+Version=3.13.0
+BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,
+  linux-header-lbm,linux-signed-image,linux-tools,linux-cloud-tools
 Types=386,ec2,generic,rt,server,virtual
 
 # information about the individual meta-pkgs
@@ -73,13 +77,17 @@ KeyDependencies=mythbuntu-artwork, mythbuntu-default-settings
 [lubuntu-desktop]
 KeyDependencies=lubuntu-core, lubuntu-default-settings
 
+[ubuntu-gnome-desktop]
+KeyDependencies=ubuntu-gnome-default-settings, ubuntu-gnome-wallpapers
+
+
 [Files]
 BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=saucy
-To=trusty
+From=trusty
+To=utopic
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
