* Port KDE GUIs to native Qt5 versions.   + pyqt5 is only imported iff the current dist version is not trusty as     that one had a nasty bug with signals and slots not connecting properly.   + pyqt4/pykde4 compatibility is retained by fallback handling for the     pyqt5 import, as well as some version checks switching out kde classes     for qt classes when using Qt5. Ultimately systems <=utopic will retain     the same behavior as before.   + KDE bits replacemed as follows:     * KIcon -> QIcon::fromTheme     * KMessageBox -> QMessageBox (using most suitable version from the       limited feature set of QMB)     * KApplication -> QApplication     * i18n -> _() * Fix KDE upgrade fetcher GUI   + Wire up do-release-upgrade with the KDE GUI to actually provide a UI     when run from a KDE Plasma envrionment   + Remove all logic that replicated stuff done in do-release-upgrade     (this primarily includes using MetaRelease to actually conduct the      version check, the automatic version checks are done by a special      script that is part of muon, so we do not ever call the fetcher      manually, and have not done so in at least 5 years)   + Detangle the Acquire class from the Fetcher class, latter is not     automatically constructing former any longer but needs to get it     supplied from the outside (i.e. do-release-upgrade)   + init arguments of both classes are now alinged with their GTK     counterparts   + The designer ui file now uses a QTextBrowser rather than a QTextEdit as     the user doesn't need to edit anything and the former supports html and     url opening   + The fetcher ui file has had all unused widgets removed which makes the     fetcher dialog have correct spacing   + The classes now hold a QApp as self.app to reflect the fact that they     may be constructed in any order and thus may need a QApplication in any     order. The actually instance is created from a new function that creates     an instance if there isn't one already. Ultimately thi

--- a/debian/control
+++ b/debian/control
@@ -67,9 +67,10 @@ Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends},
          ubuntu-release-upgrader-core (= ${source:Version}),
-         python3-pykde4, 
+         python3-pyqt5,
          kdesudo,
          psmisc
+Recommends: qttranslations5-l10n
 Replaces: update-manager-kde (<< 1:0.165)
 Breaks: update-manager-kde (<< 1:0.165)
 Description: manage release upgrades
