--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -9,10 +9,10 @@ mythbuntu-desktop
 ubuntustudio-desktop
 ubuntu-gnome-desktop
 # ubuntu-release-upgrader should not remove itself or update-manager
-update-manager
+update-manager$
 update-manager-core
 ubuntu-release-upgrader
-# posgresql (LP: #871893)
+# postgresql (LP: #871893)
 ^postgresql-.*[0-9]\.[0-9].*
 # the upgrade runs in it
 ^screen$
