* DistUpgrade/{EOL,}ReleaseAnnouncement,   DistUpgrade/{data,}/window_main.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 14.10->15.04

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -36,7 +36,7 @@ EnableApport=yes
 #SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
 [KernelRemoval]
-Version=3.13.0
+Version=3.16.0
 BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,
   linux-header-lbm,linux-signed-image,linux-tools,linux-cloud-tools
 Types=386,ec2,generic,rt,server,virtual
@@ -85,8 +85,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=trusty
-To=utopic
+From=utopic
+To=vivid
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
