--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -1,7 +1,7 @@
 # blacklist of packages that should never be removed
 ubuntu-standard
 ubuntu-minimal
-ubuntu-desktop
+ubuntu-desktop$
 kubuntu-desktop
 xubuntu-desktop
 lubuntu-desktop
