add workaround for kubuntu upgrade issue with baloo-kf5 (LP: #1426132)

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -22,7 +22,9 @@ KeepInstalledPkgs=xserver-xorg-video-all
 KeepInstalledSection=translations
 RemoveObsoletes=yes
 #ForcedObsoletes=ksplash-engine-moodin, powernowd, laptop-mode-tools
-# hints for for stuff that should be done early
+# hints for for stuff that should be done right after the cache calculated
+# the dist-upgrade (not to be confused with the PostUpgrade hooks in the
+# quirks handling)
 #PostUpgradePurge=linux-restricted-modules-common
 #PostUpgradeRemove=xsettings-kde
 #PostUpgradeUpgrade=brasero,edubuntu-desktop
@@ -53,6 +55,8 @@ KeyDependencies=plasma-desktop, kubuntu-settings-desktop
 PostUpgradeRemove=powermanagement-interface, guidance-power-manager, kde-guidance-powermanager
 # those packages are marked as obsolete right after the upgrade
 ForcedObsoletes=ivman, gtk-qt-engine
+# help the resolver a bit: LP: #1426132
+PostUpgradeInstall=baloo-kf5
 
 [kubuntu-netbook]
 KeyDependencies=plasma-netbook, kubuntu-settings-netbook
