--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -96,8 +96,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=utopic
-To=vivid
+From=vivid
+To=wily
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
