releasing package ubuntu-release-upgrader version 1:15.10.7

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -12,7 +12,8 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 # the meta-pkgs we support
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-core,
    xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop,
-   kubuntu-netbook, lubuntu-core, lubuntu-desktop, ubuntu-gnome-desktop
+   kubuntu-netbook, lubuntu-core, lubuntu-desktop, ubuntu-gnome-desktop,
+   ubuntu-mate-core, ubuntu-mate-cloudtop, ubuntu-mate-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
 #RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
@@ -90,6 +91,17 @@ KeyDependencies=lubuntu-core, lubuntu-default-settings
 [ubuntu-gnome-desktop]
 KeyDependencies=ubuntu-gnome-default-settings, ubuntu-gnome-wallpapers
 
+[ubuntu-mate-core]
+KeyDependencies=folder-color-caja, ubuntu-mate-artwork, ubuntu-mate-default-settings, ubuntu-mate-welcome
+PostUpgradeRemove=ibus
+
+[ubuntu-mate-cloudtop]
+KeyDependencies=ubuntu-mate-core
+PostUpgradeRemove=ibus
+
+[ubuntu-mate-desktop]
+KeyDependencies=deja-dup-caja, ubuntu-mate-core, ubuntu-mate-lightdm-theme
+PostUpgradeRemove=ibus
 
 [Files]
 BackupExt=distUpgrade
