--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -8,6 +8,9 @@ lubuntu-desktop
 mythbuntu-desktop
 ubuntustudio-desktop
 ubuntu-gnome-desktop
+ubuntu-mate-core
+ubuntu-mate-cloudtop
+ubuntu-mate-desktop
 # ubuntu-release-upgrader should not remove itself or update-manager
 update-manager$
 update-manager-core
