data/removal_blacklist.cfg: make ubuntu-release-upgrader blacklist entry more specific so it does not match ubuntu-release-upgrader-qt. (LP: #1313514)

--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -14,7 +14,7 @@ ubuntu-mate-desktop
 # ubuntu-release-upgrader should not remove itself or update-manager
 update-manager$
 update-manager-core
-ubuntu-release-upgrader
+ubuntu-release-upgrader-core
 # postgresql (LP: #871893)
 ^postgresql-.*[0-9]\.[0-9].*
 # the upgrade runs in it
