releasing package ubuntu-release-upgrader version 1:15.10.8

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,129 +1,102 @@
-# demoted packages from quantal to raring
-cloud-initramfs-growroot
-cpp-4.6
-cpp-4.6-doc
-g++-4.6
-g++-4.6-multilib
-gcc-4.6-base
-gcc-4.6-doc
-gcc-4.6-multilib
-gcc-4.6-plugin-dev
-gcc-4.6-source
-gcj-4.6-base
-gcj-4.6-jdk
-gcj-4.6-jre
-gcj-4.6-jre-headless
-gcj-4.6-jre-lib
-gfortran-4.6-doc
-gir1.2-clutter-gst-1.0
-gir1.2-indicate-0.7
-gir1.2-ubuntuoneui-3.0
-gnome-media
-gnome-online-accounts
-guile-1.8
-guile-1.8-dev
-guile-1.8-doc
-guile-1.8-libs
-gwibber
-gwibber-service
-gwibber-service-facebook
-gwibber-service-identica
-gwibber-service-sina
-gwibber-service-sohu
-gwibber-service-twitter
-im-switch
-installation-guide-armel
-lib32objc3
-lib32objc3-dbg
-lib32stdc++6-4.6-dbg
-lib64objc3
-lib64objc3-dbg
-lib64stdc++6-4.6-dbg
-libapm-dev
-libapm1
-libatk-adaptor-data
-libboost-regex-dev
-libcgi-fast-perl
-libclutter-gst-1.0-0
-libclutter-gst-1.0-dbg
-libclutter-gst-dev
-libclutter-gst-doc
-libcolord-gtk-dev
-libcolord-gtk1
-libdevel-leak-perl
-libfcgi-perl
-libgcj12
-libgcj12-awt
-libgcj12-dbg
-libgcj12-dev
-libgnome-media-profiles-3.0-0
-libgnome-media-profiles-dev
-libgnome-menu-dev
-libgnome-menu2
-libindicate-dev
-libindicate-doc
-libindicate-gtk-dev
-libindicate-gtk0.1-cil
-libindicate-gtk0.1-cil-dev
-libindicate-gtk3
-libindicate-gtk3-dev
-libindicate0.1-cil
-libindicate0.1-cil-dev
-libindicate5
-libllvm-3.1-ocaml-dev
-libllvm3.1
-libmath-round-perl
-libmusicbrainz5-0
-libmusicbrainz5-dev
-libmusicbrainz5-doc
-libobjc3
-libobjc3-dbg
-libreoffice-presenter-console
-libsource-highlight-common
-libsource-highlight-dev
-libsource-highlight4
-libstdc++6-4.6-dbg
-libstdc++6-4.6-dev
-libstdc++6-4.6-doc
-libstlport4.6-dev
-libstlport4.6ldbl
-libtelepathy-farstream2
-libtelepathy-farstream2-dbg
-libubuntuoneui-3.0-1
-libubuntuoneui-dev
-libvala-0.14-0
-libvala-0.14-0-dbg
-libvala-0.14-dev
-libyaml-syck-perl
-llvm-3.1
-llvm-3.1-dev
-llvm-3.1-doc
-llvm-3.1-examples
-llvm-3.1-runtime
-mscgen
-ndisgtk
-ndiswrapper-common
-ndiswrapper-utils-1.9
-python-gmenu
-python-gmenu-dbg
-python-gnupginterface
-python-magic
-python-uno
-python3-zope.fixers
-slugimage
-source-highlight
-syslinux-themes-ubuntu-quantal
-tcl8.4
-tcl8.4-dev
-tcl8.4-doc
-tk8.4
-tk8.4-dev
-tk8.4-doc
-ubuntu-defaults-zh-cn
-ubuntu-wallpapers-quantal
-ubuntuone-couch
-unity-lens-gwibber
-vala-0.14-doc
-valac-0.14
-valac-0.14-dbg
-xmlstarlet
+# demoted packages from vivid to wily
+biosdevname
+cpp-4.9-aarch64-linux-gnu
+cpp-4.9-arm-linux-gnueabihf
+cpp-4.9-powerpc-linux-gnu
+cpp-4.9-powerpc64le-linux-gnu
+dh-xsp
+dvipng
+g++-4.9-aarch64-linux-gnu
+g++-4.9-arm-linux-gnueabihf
+g++-4.9-multilib-arm-linux-gnueabihf
+g++-4.9-multilib-powerpc-linux-gnu
+g++-4.9-powerpc-linux-gnu
+g++-4.9-powerpc64le-linux-gnu
+gcc-4.9-aarch64-linux-gnu
+gcc-4.9-aarch64-linux-gnu-base
+gcc-4.9-arm-linux-gnueabihf
+gcc-4.9-arm-linux-gnueabihf-base
+gcc-4.9-multilib-arm-linux-gnueabihf
+gcc-4.9-multilib-powerpc-linux-gnu
+gcc-4.9-powerpc-linux-gnu
+gcc-4.9-powerpc-linux-gnu-base
+gcc-4.9-powerpc64le-linux-gnu
+gcc-4.9-powerpc64le-linux-gnu-base
+gir1.2-vte-2.90
+gnome-icon-theme-symbolic
+gnome-sharp2-examples
+gobjc-4.9
+gstreamer0.10-plugins-base-apps
+lib64asan1-powerpc-cross
+lib64gcc-4.9-dev-powerpc-cross
+lib64stdc++-4.9-dev-powerpc-cross
+libart2.0-cil
+libart2.0-cil-dev
+libasan1-armhf-cross
+libasan1-powerpc-cross
+libb-compiling-perl
+libb-hooks-op-check-entersubforcv-perl
+libb-utils-perl
+libcuda1-346
+libcuda1-346-updates
+libept-dev
+libexporter-lite-perl
+libgcc-4.9-dev-arm64-cross
+libgcc-4.9-dev-armhf-cross
+libgcc-4.9-dev-powerpc-cross
+libgcc-4.9-dev-ppc64el-cross
+libgconf2-4
+libgconf2.0-cil
+libgconf2.0-cil-dev
+libgnome-vfs2.0-cil
+libgnome-vfs2.0-cil-dev
+libgnome2.0-cil-dev
+libgnome2.24-cil
+libjs-raphael
+liblist-allutils-perl
+libparse-debcontrol-perl
+libpocketsphinx-dev
+libpocketsphinx1
+libsfasan1-armhf-cross
+libsfgcc-4.9-dev-armhf-cross
+libsfstdc++-4.9-dev-armhf-cross
+libsphinxbase-dev
+libsphinxbase1
+libstdc++-4.9-dev-arm64-cross
+libstdc++-4.9-dev-armhf-cross
+libstdc++-4.9-dev-powerpc-cross
+libstdc++-4.9-dev-ppc64el-cross
+libtagcoll2-dev
+libvte-2.90-9
+libvte-2.90-common
+libvte-2.90-dev
+libvte-2.90-doc
+libwebkit-cil-dev
+libwebkit1.1-cil
+libwibble-dev
+lzma
+lzma-dev
+monodoc-browser
+monodoc-manual
+monodoc-webkit-manual
+nvidia-opencl-icd-346
+nvidia-opencl-icd-346-updates
+obex-data-server
+pinentry-gtk2
+pkg-config-aarch64-linux-gnu
+pkg-config-arm-linux-gnueabihf
+pkg-config-powerpc-linux-gnu
+pkg-config-powerpc64le-linux-gnu
+python-billiard
+python-commandnotfound
+python-d2to1
+python-pocketsphinx
+python-pocketsphinx-dbg
+python-sphinxbase
+python-sphinxbase-dbg
+python-txamqp
+rhythmbox-mozilla
+sphinx-voxforge-hmm-en
+sphinx-voxforge-lm-en
+syslinux-themes-ubuntu-vivid
+x11proto-print-dev
