Remove kmix as part of Kubuntu upgrade, now plasma-pa is volume applet

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -53,7 +53,7 @@ ForcedObsoletes=desktop-effects, gnome-app-install, policykit-gnome, gnome-mount
 
 [kubuntu-desktop]
 KeyDependencies=plasma-desktop, kubuntu-settings-desktop
-PostUpgradeRemove=powermanagement-interface, guidance-power-manager, kde-guidance-powermanager
+PostUpgradeRemove=powermanagement-interface, guidance-power-manager, kde-guidance-powermanager, kmix
 # those packages are marked as obsolete right after the upgrade
 ForcedObsoletes=ivman, gtk-qt-engine
 # help the resolver a bit: LP: #1426132
