data/DistUpgrade.cfg: Update kernel version and types that will be considered for removal. (LP: #1508539)

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -39,10 +39,12 @@ EnableApport=yes
 #SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
 [KernelRemoval]
-Version=3.16.0
+Version=3.19.0
 BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,
-  linux-header-lbm,linux-signed-image,linux-tools,linux-cloud-tools
-Types=386,ec2,generic,rt,server,virtual
+  linux-header-lbm,linux-signed-image,linux-tools,linux-cloud-tools,
+  linux-image-extra
+Types=386,ec2,generic,generic-lpae,lowlatency,powerpc-e500mc,powerpc-smp,
+  powerpc64-emb,powerpc64-smp,rt,server,virtual
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
