modifying test_sources_list.py for a disabled mirror

--- a/tests/data-sources-list-test/DistUpgrade.cfg
+++ b/tests/data-sources-list-test/DistUpgrade.cfg
@@ -4,7 +4,7 @@ View=DistUpgradeViewNonInteractive
 # Distro contains global information about the upgrade
 [Distro]
 MetaPkgs=ubuntu-desktop
-;BaseMetaPkgs=ubuntu-minimal
+BaseMetaPkgs=ubuntu-minimal
 
 [ubuntu-desktop]
 KeyDependencies=gdm, gnome-panel, ubuntu-artwork
