create a new test for an obsolete mirror, use a special sources.list file for that test

--- a/tests/data-sources-list-test/sources.list.in
+++ b/tests/data-sources-list-test/sources.list.in
@@ -1,10 +1,9 @@
 
 # main repo
-deb http://mirror.mcs.anl.gov/ubuntu feisty main restricted universe multiverse
-deb http://mirror.mcs.anl.gov/ubuntu feisty-updates main restricted universe multiverse
-#deb http://mirror.mcs.anl.gov/ubuntu feisty-proposed main restricted universe multiverse
-deb http://mirror.mcs.anl.gov/ubuntu feisty-security main restricted universe multiverse
-deb-src http://mirror.mcs.anl.gov/ubuntu feisty main restricted universe multiverse
-deb-src http://mirror.mcs.anl.gov/ubuntu feisty-updates main restricted universe multiverse
-##deb-src http://mirror.mcs.anl.gov/ubuntu feisty-proposed main restricted universe multiverse
-deb-src http://mirror.mcs.anl.gov/ubuntu feisty-security main restricted universe multiverse
+deb http://archive.ubuntu.com/ubuntu/ feisty main restricted multiverse universe
+deb http://de.archive.ubuntu.com/ubuntu/ feisty main restricted multiverse
+deb-src http://archive.ubuntu.com/ubuntu/ feisty main restricted multiverse
+
+deb http://security.ubuntu.com/ubuntu/ feisty-security main restricted
+deb http://security.ubuntu.com/ubuntu/ feisty-security universe
+
