fix and run prebuild

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,102 +1,72 @@
-# demoted packages from vivid to wily
-biosdevname
-cpp-4.9-aarch64-linux-gnu
-cpp-4.9-arm-linux-gnueabihf
-cpp-4.9-powerpc-linux-gnu
-cpp-4.9-powerpc64le-linux-gnu
-dh-xsp
-dvipng
-g++-4.9-aarch64-linux-gnu
-g++-4.9-arm-linux-gnueabihf
-g++-4.9-multilib-arm-linux-gnueabihf
-g++-4.9-multilib-powerpc-linux-gnu
-g++-4.9-powerpc-linux-gnu
-g++-4.9-powerpc64le-linux-gnu
-gcc-4.9-aarch64-linux-gnu
-gcc-4.9-aarch64-linux-gnu-base
-gcc-4.9-arm-linux-gnueabihf
-gcc-4.9-arm-linux-gnueabihf-base
-gcc-4.9-multilib-arm-linux-gnueabihf
-gcc-4.9-multilib-powerpc-linux-gnu
-gcc-4.9-powerpc-linux-gnu
-gcc-4.9-powerpc-linux-gnu-base
-gcc-4.9-powerpc64le-linux-gnu
-gcc-4.9-powerpc64le-linux-gnu-base
-gir1.2-vte-2.90
-gnome-icon-theme-symbolic
-gnome-sharp2-examples
-gobjc-4.9
-gstreamer0.10-plugins-base-apps
-lib64asan1-powerpc-cross
-lib64gcc-4.9-dev-powerpc-cross
-lib64stdc++-4.9-dev-powerpc-cross
-libart2.0-cil
-libart2.0-cil-dev
-libasan1-armhf-cross
-libasan1-powerpc-cross
-libb-compiling-perl
-libb-hooks-op-check-entersubforcv-perl
-libb-utils-perl
-libcuda1-346
-libcuda1-346-updates
-libept-dev
-libexporter-lite-perl
-libgcc-4.9-dev-arm64-cross
-libgcc-4.9-dev-armhf-cross
-libgcc-4.9-dev-powerpc-cross
-libgcc-4.9-dev-ppc64el-cross
-libgconf2-4
-libgconf2.0-cil
-libgconf2.0-cil-dev
-libgnome-vfs2.0-cil
-libgnome-vfs2.0-cil-dev
-libgnome2.0-cil-dev
-libgnome2.24-cil
-libjs-raphael
-liblist-allutils-perl
-libparse-debcontrol-perl
-libpocketsphinx-dev
-libpocketsphinx1
-libsfasan1-armhf-cross
-libsfgcc-4.9-dev-armhf-cross
-libsfstdc++-4.9-dev-armhf-cross
-libsphinxbase-dev
-libsphinxbase1
-libstdc++-4.9-dev-arm64-cross
-libstdc++-4.9-dev-armhf-cross
-libstdc++-4.9-dev-powerpc-cross
-libstdc++-4.9-dev-ppc64el-cross
-libtagcoll2-dev
-libvte-2.90-9
-libvte-2.90-common
-libvte-2.90-dev
-libvte-2.90-doc
-libwebkit-cil-dev
-libwebkit1.1-cil
-libwibble-dev
-lzma
-lzma-dev
-monodoc-browser
-monodoc-manual
-monodoc-webkit-manual
-nvidia-opencl-icd-346
-nvidia-opencl-icd-346-updates
-obex-data-server
-pinentry-gtk2
-pkg-config-aarch64-linux-gnu
-pkg-config-arm-linux-gnueabihf
-pkg-config-powerpc-linux-gnu
-pkg-config-powerpc64le-linux-gnu
-python-billiard
-python-commandnotfound
-python-d2to1
-python-pocketsphinx
-python-pocketsphinx-dbg
-python-sphinxbase
-python-sphinxbase-dbg
-python-txamqp
-rhythmbox-mozilla
-sphinx-voxforge-hmm-en
-sphinx-voxforge-lm-en
-syslinux-themes-ubuntu-vivid
-x11proto-print-dev
+# demoted packages from wily to xenial
+facter
+g++-5-multilib-arm-linux-gnueabihf
+g++-5-multilib-powerpc-linux-gnu
+gcc-5-multilib-arm-linux-gnueabihf
+gcc-5-multilib-powerpc-linux-gnu
+gnutls-bin
+hiera
+lib64asan2-powerpc-cross
+lib64atomic1-powerpc-cross
+lib64gcc-5-dev-powerpc-cross
+lib64gcc1-powerpc-cross
+lib64gomp1-powerpc-cross
+lib64stdc++-5-dev-powerpc-cross
+lib64stdc++6-powerpc-cross
+lib64ubsan0-powerpc-cross
+libc6-armel-armhf-cross
+libc6-dev-armel-armhf-cross
+libclang-3.5-dev
+libclang-common-3.5-dev
+libclang-dev
+libclang1-3.5
+libcloog-ppl-dev
+libcloog-ppl1
+libelfg0
+libelfg0-dev
+libgif4
+libppl-c4
+libppl-dev
+libppl-doc
+libsfasan2-armhf-cross
+libsfatomic1-armhf-cross
+libsfgcc-5-dev-armhf-cross
+libsfgcc1-armhf-cross
+libsfgomp1-armhf-cross
+libsfstdc++-5-dev-armhf-cross
+libsfstdc++6-armhf-cross
+libsfubsan0-armhf-cross
+libvala-0.28-0
+libvala-0.28-0-dbg
+libvala-0.28-dev
+libvisual-0.4-plugins
+lksctp-tools
+llvm-dev
+llvm-runtime
+ppl-dev
+puppet
+puppet-common
+puppetmaster
+puppetmaster-common
+qt3d5-dbg
+qt3d5-dev
+qt3d5-examples
+ruby-augeas
+ruby-deep-merge
+ruby-hashie
+ruby-indentation
+ruby-rgen
+ruby-safe-yaml
+ruby-selinux
+ruby-shadow
+ruby2.1
+unity-scope-audacious
+unity-scope-clementine
+unity-scope-gmusicbrowser
+unity-scope-gourmet
+unity-scope-guayadeque
+unity-scope-musique
+vala-0.28-doc
+valac-0.28
+valac-0.28-dbg
+valac-0.28-vapi
