releasing package ubuntu-release-upgrader version 1:16.04.5

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,16 +1,35 @@
 # demoted packages from wily to xenial
+cpp-4.7
+cpp-4.7-doc
 facter
+fonts-wqy-microhei
+g++-4.7
 g++-5-multilib-arm-linux-gnueabihf
 g++-5-multilib-powerpc-linux-gnu
+gcc-4.7
+gcc-4.7-base
+gcc-4.7-doc
+gcc-4.7-plugin-dev
 gcc-5-multilib-arm-linux-gnueabihf
 gcc-5-multilib-powerpc-linux-gnu
-gnutls-bin
+gccgo-4.7-doc
 hiera
+icedtea-netx
+icedtea-netx-common
+icedtea-plugin
+ldm
+ldm-server
+lib32gcc-4.7-dev
+lib32gfortran-4.7-dev
+lib32objc-4.7-dev
 lib64asan2-powerpc-cross
 lib64atomic1-powerpc-cross
+lib64gcc-4.7-dev
 lib64gcc-5-dev-powerpc-cross
 lib64gcc1-powerpc-cross
+lib64gfortran-4.7-dev
 lib64gomp1-powerpc-cross
+lib64objc-4.7-dev
 lib64stdc++-5-dev-powerpc-cross
 lib64stdc++6-powerpc-cross
 lib64ubsan0-powerpc-cross
@@ -18,13 +37,14 @@ libc6-armel-armhf-cross
 libc6-dev-armel-armhf-cross
 libclang-3.5-dev
 libclang-common-3.5-dev
-libclang-dev
 libclang1-3.5
 libcloog-ppl-dev
 libcloog-ppl1
 libelfg0
 libelfg0-dev
-libgif4
+libgcc-4.7-dev
+libgfortran-4.7-dev
+libobjc-4.7-dev
 libppl-c4
 libppl-dev
 libppl-doc
@@ -36,18 +56,30 @@ libsfgomp1-armhf-cross
 libsfstdc++-5-dev-armhf-cross
 libsfstdc++6-armhf-cross
 libsfubsan0-armhf-cross
+libstdc++6-4.7-dev
 libvala-0.28-0
 libvala-0.28-0-dbg
 libvala-0.28-dev
 libvisual-0.4-plugins
+libx32gcc-4.7-dev
+libx32gfortran-4.7-dev
+libx32objc-4.7-dev
 lksctp-tools
-llvm-dev
-llvm-runtime
+ltsp-client
+ltsp-client-core
+ltsp-server
+ltsp-server-standalone
+ltspfs
+ltspfsd
+ltspfsd-core
+openjdk-7-demo
 ppl-dev
 puppet
 puppet-common
 puppetmaster
 puppetmaster-common
+python-curtin
+python-simplestreams
 qt3d5-dbg
 qt3d5-dev
 qt3d5-examples
@@ -59,7 +91,8 @@ ruby-rgen
 ruby-safe-yaml
 ruby-selinux
 ruby-shadow
-ruby2.1
+tmake
+ttf-wqy-microhei
 unity-scope-audacious
 unity-scope-clementine
 unity-scope-gmusicbrowser
@@ -70,3 +103,4 @@ vala-0.28-doc
 valac-0.28
 valac-0.28-dbg
 valac-0.28-vapi
+xdelta3
